// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters ChapterFilter matches snapshot when it is closed 1`] = `
<div
  className="popup-filters"
>
  <div
    className="popup-filters-top-bar"
  >
    <div
      className="dropdown-wrapper"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={false}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button filters-toggle dropdown-toggle"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="filters-angle-icon"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open with selected section 1`] = `
<div
  className="popup-filters"
>
  <div
    className="popup-filters-top-bar"
  >
    <div
      className="dropdown-wrapper"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button filters-toggle filters-toggle-open dropdown-toggle"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="filters-angle-icon filters-angle-icon-up"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="dropdown-menu"
      >
        <div
          className="chapter-filter practice-questions-chapter-filters"
          id="practice-filter-chapter"
          tabIndex={-1}
        >
          <fieldset
            className="filters-fieldset"
          >
            <legend>
              Filter by chapters
            </legend>
            <div
              className="chapter-filter-row"
            >
              <ul
                aria-label="Filter by chapters"
                className="chapter-filter-column"
              >
                <li>
                  <div
                    className="chapter-filter-details"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                      aria-expanded={false}
                      className="plain-button chapter-filter-summary-button"
                      onClick={[Function]}
                    >
                      <span
                        className="chapter-filter-title"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="filters-angle-icon"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="chapter-filter-item-wrapper"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section1"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section1"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section1",
                            }
                          }
                        />
                      </button>
                      <button
                        aria-label="Select Practice Questions by  section2"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section2"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section2",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
                <li>
                  <div
                    className="chapter-filter-details"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                      aria-expanded={true}
                      className="plain-button chapter-filter-summary-button"
                      onClick={[Function]}
                    >
                      <span
                        className="chapter-filter-title"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId2",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="filters-angle-icon filters-angle-icon-up"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={false}
                      className="chapter-filter-item-wrapper"
                      hidden={false}
                      id="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    >
                      <button
                        aria-current="true"
                        aria-label="Select Practice Questions by  section21"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section21"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section21",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Filters ChapterFilter matches snapshot when open without selected section 1`] = `
<div
  className="popup-filters"
>
  <div
    className="popup-filters-top-bar"
  >
    <div
      className="dropdown-wrapper"
    >
      <button
        aria-controls="practice-filter-chapter"
        aria-expanded={true}
        aria-label="Select Practice Questions by Chapter & Section"
        className="plain-button filters-toggle filters-toggle-open dropdown-toggle"
        data-analytics-label="Filter PQ by Chapter & Section"
        onClick={[Function]}
      >
        <div
          tabIndex={-1}
        >
          Chapter & Section
          <svg
            aria-hidden="true"
            className="filters-angle-icon filters-angle-icon-up"
            viewBox="0 0 320 512"
          >
            <path
              d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
              fill="currentColor"
            />
          </svg>
        </div>
      </button>
      <div
        className="dropdown-menu"
      >
        <div
          className="chapter-filter practice-questions-chapter-filters"
          id="practice-filter-chapter"
          tabIndex={-1}
        >
          <fieldset
            className="filters-fieldset"
          >
            <legend>
              Filter by chapters
            </legend>
            <div
              className="chapter-filter-row"
            >
              <ul
                aria-label="Filter by chapters"
                className="chapter-filter-column"
              >
                <li>
                  <div
                    className="chapter-filter-details"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                      aria-expanded={false}
                      className="plain-button chapter-filter-summary-button"
                      onClick={[Function]}
                    >
                      <span
                        className="chapter-filter-title"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="filters-angle-icon"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="chapter-filter-item-wrapper"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter1-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section1"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section1"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section1",
                            }
                          }
                        />
                      </button>
                      <button
                        aria-label="Select Practice Questions by  section2"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section2"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section2",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
                <li>
                  <div
                    className="chapter-filter-details"
                  >
                    <button
                      aria-controls="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                      aria-expanded={false}
                      className="plain-button chapter-filter-summary-button"
                      onClick={[Function]}
                    >
                      <span
                        className="chapter-filter-title"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "chapterId2",
                          }
                        }
                      />
                      <svg
                        aria-hidden="true"
                        className="filters-angle-icon"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M143 352.3L7 216.3c-9.4-9.4-9.4-24.6 0-33.9l22.6-22.6c9.4-9.4 24.6-9.4 33.9 0l96.4 96.4 96.4-96.4c9.4-9.4 24.6-9.4 33.9 0l22.6 22.6c9.4 9.4 9.4 24.6 0 33.9l-136 136c-9.2 9.4-24.4 9.4-33.8 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                    <div
                      aria-hidden={true}
                      className="chapter-filter-item-wrapper"
                      hidden={true}
                      id="practice-filter-chapter-content-testbook1-testchapter2-uuid"
                    >
                      <button
                        aria-label="Select Practice Questions by  section21"
                        className="plain-button chapter-filter-section-item"
                        data-analytics-label="Filter PQ by  section21"
                        onClick={[Function]}
                      >
                        <span
                          className="chapter-filter-title"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "section21",
                            }
                          }
                        />
                      </button>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
</div>
`;
